--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "jsonwebtoken": "8.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
-    "react-spring": "^9.2.4",
     "redux": "^4.1.1",
     "styled-components": "5.3.0",
     "typescript": "^4.1.2",
