--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,7 @@
       "no-use-before-define": "off",
       "react/require-default-props": "off",
       "react/jsx-props-no-spreading": "off",
-      "react/prop-types": "off"
+      "react/prop-types": "off",
+      "jsx-a11y/label-has-associated-control": "off"
     }
 }
