--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@types/react-dom": "^17.0.0",
     "jsonwebtoken": "8.5.1",
     "react": "^17.0.2",
+    "react-detect-click-outside": "^1.1.1",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.1.0",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "5.2.0",
