--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,7 @@
       "react/require-default-props": "off",
       "react/jsx-props-no-spreading": "off",
       "react/prop-types": "off",
-      "jsx-a11y/label-has-associated-control": "off"
+      "jsx-a11y/label-has-associated-control": "off",
+      "no-undef": "off"
     }
 }
